Перенесла картинки в одну папку

--- a/article_05122023.html
+++ b/article_05122023.html
@@ -17,7 +17,7 @@
     <div class="container">
       <div class="page-header__row">
 
-        <img src="images/logo.svg" alt="Fox Game" width="122" height="66" class="page-header__logo">
+        <img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="page-header__logo">
 
         <nav class="page-header__nav">
           <ul class="page-header__menu">
@@ -39,7 +39,7 @@
     <section>
       <div class="container">
         <div class="article-banner">
-          <img src="./images/article_banner/reflection_banner.jpg" alt="Reflection" class="article-banner__img">
+          <img src="./image/article_banner/reflection_banner.jpg" alt="Reflection" class="article-banner__img">
           <h1 class="article-banner__title">reflection - старт закрытого бета-теста</h1>
         </div>
     </section>
