--- a/article_05122023.html
+++ b/article_05122023.html
@@ -9,6 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- styles -->
+  <link rel="stylesheet" href="./StyleFox.css">
   <link rel="stylesheet" href="./article.css">
 </head>
 <body>
