--- a/article_05122023.html
+++ b/article_05122023.html
@@ -65,13 +65,50 @@
 
           <p class="article__text">Дополнительная информация о том, как заинтересованные геймеры могут принять участие в предстоящих этапах или получить доступ после официального релиза, будет распространена через официальные каналы Fox Game. Следите за новостями в наших социальных сетях.</p>
 
-          <p class="article__text"><a href="#" class="article__text--link">Страница проекта в Steam</a>
-            </p>
+          <p class="article__text"><a href="#" class="article__text--link">Страница проекта в Steam</a></p>
         </div>
       </div>
     </section>
   </main>
 
+  <!-- footer -->
+  <footer class="page-footer">
+    
+    <div class="page-footer__top">
+      <div class="container">
+        <div class="page-footer__row">
+        
+          <a href="./index.html"><img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-footer__logo"></a>
+
+          <nav class="page-footer__nav">
+          <ul class="page-footer__menu">
+            <li><a href="#">Контакты</a></li>
+            <li><a href="#">Политика конфиденциальности</a></li>
+          </ul>
+          </nav>
+
+          <div class="page-footer__contact">
+            <a href="#"><img src="./Image/contact/vk.svg" alt="VK" class="contact-img"></a>
+
+            <a href="#"><img src="./Image/contact/youtube.svg" alt="YouTube" class="contact-img"></a>
+
+            <a href="#"><img src="./Image/contact/twitter.svg" alt="Twitter" class="contact-img"></a>
+
+            <a href="#"><img src="./Image/contact/facebook.svg" alt="Facebook" class="contact-img"></a>
+
+            <a href="#"><img src="./Image/contact/instagram.svg" alt="Instagram" class="contact-img"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="page-footer__bottom">
+      <div class="container">
+        <p class="page-footer__text">© 2019-2023. Все права защищены. Использование материалов с сайта без разрешения запрещено!
+        </p>
+      </div>
+    </div>
+  </footer>
 
 </body>
 </html>
