Первая статья готова (вроде бы)

--- a/article_05122023.html
+++ b/article_05122023.html
@@ -40,14 +40,17 @@
     <section>
       <div class="container">
         <div class="article-banner">
-          <img src="./image/article_banner/reflection_banner.jpg" alt="Reflection" class="article-banner__img">
-          <h1 class="article-banner__title">reflection - старт закрытого бета-теста</h1>
+          <div class="article-banner__container">
+            <img src="./image/article_banner/reflection_banner.jpg" alt="Reflection" class="article-banner__img">
+          </div>
+            <div class="article-banner__title">reflection - старт закрытого бета-теста</div>
+          </div>
         </div>
     </section>
 
     <!-- article -->
     <section class="page-section--article">
-        <div class="article">
+        <div class="container article">
           <h3 class="article__title">reflection - старт закрытого бета-теста</h3>
           <p class="article__date">16 ноября 2023</p>
           <p class="article__text">26 ноября наконец-то стартовала долгожданная фаза закрытого бета-тестирования новой революционной игры под названием <span class="article__text--bold">Reflection</span>.</p>
