Добавлена стрелочка "наверх"

--- a/article_05122023.html
+++ b/article_05122023.html
@@ -74,6 +74,8 @@
     </section>
   </main>
 
+  <a href="#top" id="back-to-top" class="back-to-top" title="Back to top"><img src="./Image/back_to_top.svg" alt="" width="60" height="60"></a>
+
   <!-- footer -->
   <footer class="page-footer">
     
@@ -114,4 +116,9 @@
   </footer>
 
 </body>
+
+<a href="#top" id="back-to-top" class="back-to-top" title="Наверх"><img src="./Image/back_to_top.svg" alt="" width="60" height="60"></a>
+
+<script src="./js/backToTop.js"></script>
+
 </html>
