Правки. Начата вторая статья (добавить картинки)

--- a/article_05122023.html
+++ b/article_05122023.html
@@ -41,9 +41,9 @@
       <div class="container">
         <div class="article-banner">
           <div class="article-banner__container">
-            <img src="./image/article_banner/reflection_banner.jpg" alt="Reflection" class="article-banner__img">
+            <img src="./image/article_banner/magic_shop.jpg" alt="Reflection" class="article-banner__img">
           </div>
-            <div class="article-banner__title">reflection - старт закрытого бета-теста</div>
+            <div class="article-banner__title">Magic shop - старт публичного бета-теста</div>
           </div>
         </div>
     </section>
@@ -51,30 +51,28 @@
     <!-- article -->
     <section class="page-section--article">
         <div class="container article">
-          <h3 class="article__title">reflection - старт закрытого бета-теста</h3>
-          <p class="article__date">16 ноября 2023</p>
-          <p class="article__text">26 ноября наконец-то стартовала долгожданная фаза закрытого бета-тестирования новой революционной игры под названием <span class="article__text--bold">Reflection</span>.</p>
+          <h3 class="article__title">Magic shop - старт публичного бета-теста</h3>
+          <p class="article__date">5 декабря 2023</p>
+          <p class="article__text"><span class="article__text--bold">Magic Shop</span>, предстоящая фэнтезийная видеоигра, недавно открыла свои двери для жаждущих геймеров со всего мира для публичного бета-тестирования. С 10 по 23 декабря игроки могут погрузиться в этот завораживающий мир, полный волшебства и чудес, на популярной игровой платформе <a href="#" class="article__text--link">Steam</a>.</p>
           
-          <p class="article__text">Игра <span class="article__text--bold">Reflection</span>, разработанная командой дальновидных создателей из Fox Game, бросает вызов традиционным концепциям захватывающего игрового процесса. Благодаря передовым технологиям и инновационному дизайну этот амбициозный проект призван стереть границы между виртуальностью и реальностью, как никогда раньше. </p>
+          <p class="article__text">В <span class="article__text--bold">Magic Shop</span>p игроки отправляются в увлекательное путешествие, взяв на себя роль начинающего волшебника, который натыкается на мистический магазин, спрятанный глубоко в шумном городе. Это необычное заведение хранит секреты, которые ждут, чтобы их раскрыли, пока игроки разгадывают его тайны и раскрывают свои магические способности.</p>
 
-          <p class="article__text">На этапе закрытого бета-тестирования с ограниченным доступом удачливые участники получат исключительную возможность сформировать и усовершенствовать этот уникальный опыт. От вариантов настройки персонажа, которые идеально имитируют особенности реальной жизни, до замысловатых деталей ландшафтов, созданных специально для желаний каждого игрока — возможности кажутся безграничными.</p>
+          <p class="article__text">В течение этого эксклюзивного периода тестирования участники получат доступ к различным ключевым игровым механикам <span class="article__text--bold">Magic Shop</span>. Они смогут исследовать замысловато спроектированную среду, наполненную яркими цветами и замысловатыми деталями, которые оживляют каждый уголок этого виртуального мира. От пыльных книжных полок, заставленных древними гримуарами, до сверкающих хрустальных бальных залов — каждое место предлагает уникальные впечатления, которые ждут своего открытия.</p>
 
-          <iframe width="754" height="427" src="https://www.youtube.com/embed/4Jd5Rgne8J0?si=JzFi855olcN7a9Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="article__video"></iframe>
-          
+          <!-- вставить картинки -->
 
-          <p class="article__text">При первом знакомстве с <span class="article__text--bold">Reflection</span> открывается потрясающе реалистичная графика в сочетании с захватывающим звуковым оформлением — удовольствие для слуха в сочетании с захватывающими дух визуальными эффектами, тщательно разработанными талантливыми художниками Fox Game. В каждой сцене запечатлены даже мельчайшие детали — от солнечного света, пробивающегося сквозь листья в заколдованных лесах, до капель дождя, блестящих на городских улицах в сумерках.</p>
+          <p class="article__text">Одним из ключевых моментов, является захватывающая магическая система, встроенная в игровую механику <span class="article__text--bold">Magic Shop</span>. Имея в своем распоряжении огромный набор заклинаний — от манипуляции стихиями и телекинеза до создания иллюзий — игроки могут дать волю своему воображению и создавать мощные заклинания на протяжении всего своего приключения.    </p>
 
-          <p class="article__text">Fox Game намерена использовать этап бета-тестирования, чтобы собрать бесценную обратную связь и убедиться, что конечный продукт превзойдет все ожидания. У игроков будет уникальная возможность внести непосредственный вклад в разработку игры, формируя ее будущее вместе с другими страстными энтузиастами.</p>
+          <p class="article__text">Отзывы игроков, полученные на этапе публичного бета-тестирования, служат бесценными данными для дальнейшего улучшения игровой механики, сглаживания любых потенциальных сбоев или ошибок, возникших во время тестирования, — все это способствует созданию исключительного конечного продукта после официального выпуска.</p>
 
-          <p class="article__text">Дополнительная информация о том, как заинтересованные геймеры могут принять участие в предстоящих этапах или получить доступ после официального релиза, будет распространена через официальные каналы Fox Game. Следите за новостями в наших социальных сетях.</p>
+          <p class="article__text">Чтобы обеспечить максимальную удовлетворенность игроков даже во время периода бета-тестирования, мы создали специальный канал поддержки в <a href="#" class="article__text--link">Discord</a>, где участники могут делиться своим опытом, сообщать о любых возникших проблемах или давать ценные предложения для дальнейшего улучшения игрового процесса.</p>
 
-          <p class="article__text"><a href="#" class="article__text--link">Страница проекта в Steam</a></p>
+          <p class="article__text">Присоединяйтесь к публичному бета-тесту в <a href="#" class="article__text--link">Steam</a>!</p>
         </div>
       </div>
     </section>
   </main>
 
-  <a href="#top" id="back-to-top" class="back-to-top" title="Back to top"><img src="./Image/back_to_top.svg" alt="" width="60" height="60"></a>
 
   <!-- footer -->
   <footer class="page-footer">
