--- a/article_05122023.html
+++ b/article_05122023.html
@@ -59,7 +59,10 @@
 
           <p class="article__text">В течение этого эксклюзивного периода тестирования участники получат доступ к различным ключевым игровым механикам <span class="article__text--bold">Magic Shop</span>. Они смогут исследовать замысловато спроектированную среду, наполненную яркими цветами и замысловатыми деталями, которые оживляют каждый уголок этого виртуального мира. От пыльных книжных полок, заставленных древними гримуарами, до сверкающих хрустальных бальных залов — каждое место предлагает уникальные впечатления, которые ждут своего открытия.</p>
 
-          <!-- вставить картинки -->
+          <p class="article__container-img">
+            <img src="./Image/article_photo/photo_2023-12-19_16-50-36 1.jpg" alt="" class="article__img">
+            <img src="./Image/article_photo/photo_2023-12-19_16-50-35 (2) 1.jpg" alt="" class="article__img">
+          </p>
 
           <p class="article__text">Одним из ключевых моментов, является захватывающая магическая система, встроенная в игровую механику <span class="article__text--bold">Magic Shop</span>. Имея в своем распоряжении огромный набор заклинаний — от манипуляции стихиями и телекинеза до создания иллюзий — игроки могут дать волю своему воображению и создавать мощные заклинания на протяжении всего своего приключения.    </p>
 
