--- a/article_16112023.html
+++ b/article_16112023.html
@@ -59,7 +59,7 @@
 
           <p class="article__text">На этапе закрытого бета-тестирования с ограниченным доступом удачливые участники получат исключительную возможность сформировать и усовершенствовать этот уникальный опыт. От вариантов настройки персонажа, которые идеально имитируют особенности реальной жизни, до замысловатых деталей ландшафтов, созданных специально для желаний каждого игрока — возможности кажутся безграничными.</p>
 
-          <iframe width="754" height="427" src="https://www.youtube.com/embed/4Jd5Rgne8J0?si=JzFi855olcN7a9Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="article__video"></iframe>
+          <p><iframe width="754" height="427" src="https://www.youtube.com/embed/4Jd5Rgne8J0?si=JzFi855olcN7a9Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="article__video"></iframe></p>
           
 
           <p class="article__text">При первом знакомстве с <span class="article__text--bold">Reflection</span> открывается потрясающе реалистичная графика в сочетании с захватывающим звуковым оформлением — удовольствие для слуха в сочетании с захватывающими дух визуальными эффектами, тщательно разработанными талантливыми художниками Fox Game. В каждой сцене запечатлены даже мельчайшие детали — от солнечного света, пробивающегося сквозь листья в заколдованных лесах, до капель дождя, блестящих на городских улицах в сумерках.</p>
