Третья статья + правки

--- a/article_16112023.html
+++ b/article_16112023.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fox Game|Reflection - старт закрытого бета-теста</title>
+  <title>Fox Game|Партнерская программа для контент-мейкеров </title>
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -41,9 +41,9 @@
       <div class="container">
         <div class="article-banner">
           <div class="article-banner__container">
-            <img src="./image/article_banner/reflection_banner.jpg" alt="Reflection" class="article-banner__img">
+            <img src="./image/article_banner/073b3f4b19a6514275a7202266a79bcc.png" alt="Reflection" class="article-banner__img">
           </div>
-            <div class="article-banner__title">reflection - старт закрытого бета-теста</div>
+            <div class="article-banner__title">партнерская программа для контент-мейкеров</div>
           </div>
         </div>
     </section>
@@ -51,24 +51,28 @@
     <!-- article -->
     <section class="page-section--article">
         <div class="container article">
-          <h3 class="article__title">reflection - старт закрытого бета-теста</h3>
-          <p class="article__date">16 ноября 2023</p>
-          <p class="article__text">26 ноября наконец-то стартовала долгожданная фаза закрытого бета-тестирования новой революционной игры под названием <span class="article__text--bold">Reflection</span>.</p>
+          <h3 class="article__title">партнерская программа для контент-мейкеров </h3>
+          <p class="article__date">29 ноября 2023</p>
           
-          <p class="article__text">Игра <span class="article__text--bold">Reflection</span>, разработанная командой дальновидных создателей из Fox Game, бросает вызов традиционным концепциям захватывающего игрового процесса. Благодаря передовым технологиям и инновационному дизайну этот амбициозный проект призван стереть границы между виртуальностью и реальностью, как никогда раньше. </p>
+          <p class="article__text">Вы начинающий создатель контента и страстно любите игры? Мечтаете сотрудничать с профессионалами отрасли и поднять свои творческие начинания на новую высоту? Не ищите ничего, кроме новаторской программы партнерства с создателями контента Fox Game, призванной связать таких начинающих авторов, как вы, с опытными экспертами и предоставить эксклюзивную платформу для демонстрации вашего таланта.</p>
 
-          <p class="article__text">На этапе закрытого бета-тестирования с ограниченным доступом удачливые участники получат исключительную возможность сформировать и усовершенствовать этот уникальный опыт. От вариантов настройки персонажа, которые идеально имитируют особенности реальной жизни, до замысловатых деталей ландшафтов, созданных специально для желаний каждого игрока — возможности кажутся безграничными.</p>
+          <p class="article__text">Что делает нашу программу действительно уникальной, так это наша приверженность индивидуальности. Мы понимаем, что каждый создатель контента обладает своим собственным стилем и видением — истинная сущность, ожидающая выхода в мир. Вот почему наша модель партнерства ориентирована на подбор совместимых креативов на основе общих интересов, сильных сторон и целей. Развивая эти связи, сотрудники получают доступ к бесценным возможностям наставничества от опытных ветеранов, которые заинтересованы в их росте.</p>        
 
-          <p><iframe width="754" height="427" src="https://www.youtube.com/embed/4Jd5Rgne8J0?si=JzFi855olcN7a9Mg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="article__video"></iframe></p>
-          
+          <p class="article__text"> Благодаря этой уникальной инициативе участники получают:</p>
 
-          <p class="article__text">При первом знакомстве с <span class="article__text--bold">Reflection</span> открывается потрясающе реалистичная графика в сочетании с захватывающим звуковым оформлением — удовольствие для слуха в сочетании с захватывающими дух визуальными эффектами, тщательно разработанными талантливыми художниками Fox Game. В каждой сцене запечатлены даже мельчайшие детали — от солнечного света, пробивающегося сквозь листья в заколдованных лесах, до капель дождя, блестящих на городских улицах в сумерках.</p>
+          <ol>
+            <li class="article__text"><span class="article__text--bold">Индивидуальное руководство:</span> сотрудничающие создатели контента получают персональные рекомендации от опытных наставников из студии Fox Game, которые делятся своими мыслями о различных аспектах разработки игр, включая методы повествования, принципы дизайна персонажей, совершенствование игровой механики — возможности безграничны!</li>
+            <li class="article__text"><span class="article__text--bold">Ранний доступ и краткий обзор:</span> познакомьтесь поближе с предстоящими проектами, получив ранний доступ на этапах альфа- или бета-тестирования, а также получив краткий обзор неизданных игр до того, как они появятся на основных платформах.</li>
+            <li class="article__text"><span class="article__text--bold">Распространение и поддержка.</span> В рамках партнерской программы Fox Game Studio распространение идет рука об руку! Расширьте свое присутствие за счет сотрудничества, представленного на официальных каналах, таких как платформы социальных сетей, а также специальных публикаций в блогах или видеоинтервью, демонстрирующих ваш творческий путь. Воспользуйтесь преимуществами устоявшейся аудитории Fox Game, чтобы расширить свой охват и создать преданную базу поклонников.</li>
+            <li class="article__text"><span class="article__text--bold">Пул ресурсов:</span> доступ к обширному пулу ресурсов с ведущими в отрасли инструментами, программным обеспечением и технологиями, доступными исключительно партнерским создателям контента. Сюда входят художественные ресурсы, игровые движки, библиотеки звуков и многое другое — все, что вам нужно, чтобы воплотить свое видение в жизнь!</li>
+            <li class="article__text"><span class="article__text--bold">Возможности для налаживания связей. </span>Взаимодействуйте с другими партнерами посредством эксклюзивных мероприятий, предназначенных для сотрудничества и налаживания связей в рамках разнообразного сообщества талантливых авторов Fox Game Studio. Делитесь знаниями, обменивайтесь идеями и формируйте прочные связи с единомышленниками, стремящимися расширить границы создания игрового контента.</li>
+          </ol>
 
-          <p class="article__text">Fox Game намерена использовать этап бета-тестирования, чтобы собрать бесценную обратную связь и убедиться, что конечный продукт превзойдет все ожидания. У игроков будет уникальная возможность внести непосредственный вклад в разработку игры, формируя ее будущее вместе с другими страстными энтузиастами.</p>
+          <p class="article__text">Присоединяйтесь к нам в этом необычном приключении, поскольку мы по-новому определяем, что значит быть создателем контента в постоянно меняющемся мире игр. Вместе с неизменной системой поддержки нашей партнерской программы раскройте свой творческий потенциал без ограничений — и позвольте Fox Game помочь вам воплотить ваши мечты в реальность! Ваш уникальный голос заслуживает того, чтобы его услышали громко и ясно.</p>
 
-          <p class="article__text">Дополнительная информация о том, как заинтересованные геймеры могут принять участие в предстоящих этапах или получить доступ после официального релиза, будет распространена через официальные каналы Fox Game. Следите за новостями в наших социальных сетях.</p>
+          <p class="article__text">Готовы к следующему уровню? Подайте заявку на участие в партнерской программе Fox Game для создателей контента — пришло время отправиться в незабываемое путешествие, где вдохновение встречается с инновациями! </p>
 
-          <p class="article__text"><a href="#" class="article__text--link">Страница проекта в Steam</a></p>
+          <p class="article__text"><span class="article__text--bold">Наш e-mail для ваших заявок:</span><a href="#" class="article__text--link">foxgamestudio@gmail.com</a></p>
         </div>
       </div>
     </section>
