--- a/article_05122023.html
+++ b/article_05122023.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Fox Game|Reflection - старт закрытого бета-теста</title>
+  <title>Fox Game|Magic shop - старт публичного бета-теста</title>
   <!-- font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
