--- a/article_16112023.html
+++ b/article_16112023.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- styles -->
   <link rel="stylesheet" href="./StyleFox.css">
-  <link rel="stylesheet" href="./article.css">
+  <link rel="stylesheet" href="./styles/article.css">
 </head>
 <body>
   <!-- header -->
