--- a/index_ver2.html
+++ b/index_ver2.html
@@ -122,4 +122,9 @@
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
 </body>
+
+<a href="#top" id="back-to-top" class="back-to-top" title="Наверх"><img src="./Image/back_to_top.svg" alt="" width="60" height="60"></a>
+
+<script src="./js/backToTop.js"></script>
+
 </html>
