--- a/index_ver2.html
+++ b/index_ver2.html
@@ -42,6 +42,7 @@
   </header>
   <!-- END header -->
 
+  <main>
     <!-- slider -->
     <div class="container">
       <div class="slider swiper">
@@ -80,6 +81,8 @@
       </div>
     </div>
 
+  </main>
+  
   <!-- footer -->
   <footer class="page-footer">
     <div class="page-footer__top">
@@ -119,12 +122,13 @@
   </footer> 
   <!-- END footer -->
 
+
+  <!-- якорь -->
+  <a href="#top" id="back-to-top" class="back-to-top" title="Наверх"><img src="./Image/back_to_top.svg" alt="" width="60" height="60"></a>
+
+  <!-- scripts -->
   <script src="js/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
+  <script src="./js/backToTop.js"></script>
 </body>
-
-<a href="#top" id="back-to-top" class="back-to-top" title="Наверх"><img src="./Image/back_to_top.svg" alt="" width="60" height="60"></a>
-
-<script src="./js/backToTop.js"></script>
-
 </html>
