--- a/article_05122023.html
+++ b/article_05122023.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- styles -->
-  <link rel="stylesheet" href="./StyleFox.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/article.css">
 </head>
 <body>
@@ -43,15 +43,15 @@
           <div class="article-banner__container">
             <img src="./image/article_banner/magic_shop.jpg" alt="Reflection" class="article-banner__img">
           </div>
-            <div class="article-banner__title">Magic shop - старт публичного бета-теста</div>
+            <div class="title article-banner__title">Magic shop - старт публичного бета-теста</div>
           </div>
         </div>
     </section>
 
     <!-- article -->
-    <section class="page-section--article">
+    <section class="page-section--pd60">
         <div class="container article">
-          <h3 class="article__title">Magic shop - старт публичного бета-теста</h3>
+          <h3 class="title article__title">Magic shop - старт публичного бета-теста</h3>
           <p class="article__date">5 декабря 2023</p>
           <p class="article__text"><span class="article__text--bold">Magic Shop</span>, предстоящая фэнтезийная видеоигра, недавно открыла свои двери для жаждущих геймеров со всего мира для публичного бета-тестирования. С 10 по 23 декабря игроки могут погрузиться в этот завораживающий мир, полный волшебства и чудес, на популярной игровой платформе <a href="#" class="article__text--link">Steam</a>.</p>
           
