--- a/article_16112023.html
+++ b/article_16112023.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- styles -->
-  <link rel="stylesheet" href="./StyleFox.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/article.css">
 </head>
 <body>
@@ -43,15 +43,15 @@
           <div class="article-banner__container">
             <img src="./image/article_banner/073b3f4b19a6514275a7202266a79bcc.png" alt="Reflection" class="article-banner__img">
           </div>
-            <div class="article-banner__title">партнерская программа для контент-мейкеров</div>
+            <div class="title article-banner__title">партнерская программа для контент-мейкеров</div>
           </div>
         </div>
     </section>
 
     <!-- article -->
-    <section class="page-section--article">
+    <section class="page-section--pd60">
         <div class="container article">
-          <h3 class="article__title">партнерская программа для контент-мейкеров </h3>
+          <h3 class="title article__title">партнерская программа для контент-мейкеров </h3>
           <p class="article__date">29 ноября 2023</p>
           
           <p class="article__text">Вы начинающий создатель контента и страстно любите игры? Мечтаете сотрудничать с профессионалами отрасли и поднять свои творческие начинания на новую высоту? Не ищите ничего, кроме новаторской программы партнерства с создателями контента Fox Game, призванной связать таких начинающих авторов, как вы, с опытными экспертами и предоставить эксклюзивную платформу для демонстрации вашего таланта.</p>
