--- a/article_29112023.html
+++ b/article_29112023.html
@@ -9,7 +9,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!-- styles -->
-  <link rel="stylesheet" href="./StyleFox.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <link rel="stylesheet" href="./styles/article.css">
 </head>
 <body>
@@ -43,15 +43,15 @@
           <div class="article-banner__container">
             <img src="./image/article_banner/reflection_banner.jpg" alt="Reflection" class="article-banner__img">
           </div>
-            <div class="article-banner__title">reflection - старт закрытого бета-теста</div>
+            <div class="title article-banner__title">reflection - старт закрытого бета-теста</div>
           </div>
         </div>
     </section>
 
     <!-- article -->
-    <section class="page-section--article">
+    <section class="page-section--pd60">
         <div class="container article">
-          <h3 class="article__title">reflection - старт закрытого бета-теста</h3>
+          <h3 class="title article__title">reflection - старт закрытого бета-теста</h3>
           <p class="article__date">16 ноября 2023</p>
           <p class="article__text">26 ноября наконец-то стартовала долгожданная фаза закрытого бета-тестирования новой революционной игры под названием <span class="article__text--bold">Reflection</span>.</p>
           
