--- a/index_ver2.html
+++ b/index_ver2.html
@@ -45,12 +45,12 @@
   <main>
     <!-- slider -->
     <div class="container">
-      <div class="slider swiper">
+      <div class="slider swiper page-section--pd60">
         <ul class="slider__list swiper-wrapper">
 
           <li class="swiper-slide slider-block">
             <div class="slider-block__text">
-              <div class="slider-block__title">Стань частью команды FOX Game!</div>
+              <div class="title slider-block__title">Стань частью команды FOX Game!</div>
               <p>Открыты вакансии на должность гейм-дизайнера, программиста С++ и другие. Успей подать свою заявку!</p>
               <a href="#" class="button slider-block__button">Узнать подробности</a>
             </div>
@@ -81,8 +81,19 @@
       </div>
     </div>
 
+    <!-- about -->
+    <section class="page-section--grey page-section--pd80">
+      <div class="about container">
+        <img src="./Image/about.png" alt="" class="about__img">
+        <div class="about__text">
+          <h2 class="title about__title">О нас</h2>
+          <p>Мы - передовая и инновационная игровая студия, которая расширяет границы воображения. Мы верим в создание увлекательного опыта, который переносит игроков в захватывающие виртуальные миры, наполненные чудесами, волнением и бесконечными возможностями.</p>
+          <p>Наша команда талантливых разработчиков, дизайнеров, художников и сценаристов неустанно работает над созданием игр, которые захватывают ваши чувства и отправляют в незабываемые путешествия. От потрясающей графики до умопомрачительной игровой механики — каждый аспект тщательно проработан, чтобы обеспечить беспрецедентный игровой опыт.</p>
+        </div>
+      </div>
+    </section>
   </main>
-  
+
   <!-- footer -->
   <footer class="page-footer">
     <div class="page-footer__top">
