Полностью сделал новости

--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
                     <div>Открыты вакансии на должность гейм-</div>
                     <div>дизайнера, программиста С++ и другие.</div>
                     <div>Успей подать свою заявку!</div>
+                    <p>Открыты вакансии на должность гейм-дизайнера, программиста С++ и другие. Успей подать свою заявку!</p>
                 </div>
                 <!-- Кнопка -->
                 <div class="slide__intro__button">Узнать подробности</div>
