о нас + начало проектов

--- a/index_ver2.html
+++ b/index_ver2.html
@@ -59,7 +59,7 @@
 
           <li class="swiper-slide slider-block">
             <div class="slider-block__text">
-              <div class="slider-block__title">Magic shop - <br>
+              <div class="title slider-block__title">Magic shop - <br>
               Старт пбт!</div>
               <p>Старт публичного бета-теста с 10 по 23 декабря. Не упустите возможность первым познакомиться с проектом!</p>
               <a href="#" class="button slider-block__button">Узнать подробности</a>
@@ -69,7 +69,7 @@
 
           <li class="swiper-slide slider-block">
             <div class="slider-block__text">
-              <div class="slider-block__title">Партнерская программа для контент-мейкеров</div>
+              <div class="title slider-block__title">Партнерская программа для контент-мейкеров</div>
               <p>Станьте партнёром Fox Game и получайте ранний доступ к нашим играм!</p>
               <a href="#" class="button slider-block__button">Узнать подробности</a>
             </div>
@@ -91,6 +91,35 @@
           <p>Наша команда талантливых разработчиков, дизайнеров, художников и сценаристов неустанно работает над созданием игр, которые захватывают ваши чувства и отправляют в незабываемые путешествия. От потрясающей графики до умопомрачительной игровой механики — каждый аспект тщательно проработан, чтобы обеспечить беспрецедентный игровой опыт.</p>
         </div>
       </div>
+    </section>
+
+    <section class="page-section--pd80">
+      <div class="about-project container">
+        <h2 class="title about-project__title">Наши проекты</h2>
+        <p>Приоритет нашей студии — качественный контент, многократно отмеченный экспертами и игроками. Мы специализируемся на создании неповторимой атмосферы, увлекательного геймплея, красочной графики и уникального игрового опыта.</p>
+        <p class="about-project__quote">“Ваши ощущения - наши приключения!”</p>
+      </div>
+    </section>
+
+    <section class="page-section--grey page-section--pd80">
+      <div class="project container">
+        <div class="card project__card">
+          <div class="card__img">
+            <a href="#"><img src="./Image/project/Euphoria.png" alt="Euphoria"></a>
+          </div>
+          <div class="card__title">
+            <h3>Euphoria</h3>
+            <div class="card__rating">
+              <img src="./Image/star_icon.svg" alt="">
+              <p>4.6</p>
+            </div>
+          </div>
+          <p class="card__text">Платформы: Windows, macOS, Nintendo Switch</p>
+          <p class="card__text">Дата релиза: 09.10.2023 </p>
+          <a href="" class="button card__button">Узнать подробности</a>
+        </div>
+      </div>
+
     </section>
   </main>
 
