Перенесла всё в основной файл index

--- a/index_ver2.html
+++ b/index_ver2.html
@@ -212,7 +212,7 @@
       <div class="container">
         <div class="page-footer__row">
         
-          <a href="./index.html"><img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-footer__logo"></a>
+          <img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="logo page-footer__logo">
 
           <nav class="page-footer__nav">
           <ul class="page-footer__menu">
