--- a/index.html
+++ b/index.html
@@ -17,15 +17,10 @@
 
   <!-- header -->
   <header class="page-header">
-
     <div class="container">
-
         <div class="page-header__row">
-
             <img src="image/logo.svg" alt="Fox Game" width="122" height="66" class="page-header__logo">
-
             <nav class="page-header__nav">
-
             <ul class="page-header__menu">
                 <li><a href="#">О нас</a></li>
                 <li><a href="#">Проекты</a></li>
@@ -34,9 +29,7 @@
                 <li><a href="#">Новости</a></li>
                 <li><a href="#">Вакансии</a></li>
             </ul>
-
             </nav>
-      
         </div>
     </div>
   </header>
@@ -120,10 +113,10 @@
                       <p>4.6</p>
                     </div>
                   </div>
-                  <p class="card__text"><span class="text--bold">Платформы:</span> Windows, macOS, Nintendo Switch</p>
+                  <p class="card__text"><span class="text--bold">Платформы:</span> Windows, macOS, Nintendo Switch lo</p>
                   <p class="card__text"><span class="text--bold">Дата релиза:</span> 09.10.2023 </p>
                 </div>
-                <a href="" class="button card__button">Узнать подробности</a>
+                <a href="" class="button card__button">Подробнее</a>
               </li>
     
               <li class="card project__card swiper-slide">
@@ -141,7 +134,7 @@
                   <p class="card__text"><span class="text--bold">Платформы:</span> Windows, macOS, Nintendo Switch, Xbox One, PlayStation 4</p>
                   <p class="card__text"><span class="text--bold">Дата релиза:</span> 07.03.2023</p>
                 </div>
-                <a href="" class="button card__button">Узнать подробности</a>
+                <a href="" class="button card__button">Подробнее</a>
               </li>
 
               <li class="card project__card swiper-slide">
@@ -159,7 +152,7 @@
                   <p class="card__text"><span class="text--bold">Платформы:</span> Windows, macOS, Android, iOS</p>
                   <p class="card__text"><span class="text--bold">Дата релиза:</span> 03.07.2022</p>
                 </div>
-                <a href="" class="button card__button">Узнать подробности</a>
+                <a href="" class="button card__button">Подробнее</a>
               </li>
 
               <li class="card project__card swiper-slide">
@@ -177,7 +170,7 @@
                   <p class="card__text"><span class="text--bold">Платформы:</span> Windows, macOS, Nintendo Switch, Xbox One, PlayStation 4</p>
                   <p class="card__text"><span class="text--bold">Дата релиза:</span> 03.02.2024 </p>
                 </div>
-                <a href="" class="button card__button">Узнать подробности</a>
+                <a href="" class="button card__button">Подробнее</a>
               </li>
 
               <li class="card project__card swiper-slide">
@@ -195,7 +188,7 @@
                   <p class="card__text"><span class="text--bold">Платформы:</span> Windows, macOS, Android, iOS</p>
                   <p class="card__text"><span class="text--bold">Дата релиза:</span> 15.05.2024 </p>
                 </div>
-                <a href="" class="button card__button">Узнать подробности</a>
+                <a href="" class="button card__button">Подробнее</a>
               </li>
             </ul>
 
@@ -204,6 +197,17 @@
         </div>
       </div>
     </section>
+
+    <!-- Q&A -->
+    <section class="page-section--pd80">
+
+    </section>
+
+    <!-- Contact -->
+    <section class="page-section--grey page-section--pd80">
+
+    </section>
+
   </main>
 
   <!-- footer -->
